@@ -13,7 +13,7 @@
                 <img src="./images/fisherman.jpg" alt="Majima from the Yakuza series" class="about-image">
                 <div class="about-text">
                     <h2>About</h2>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis justo non tincidunt tincidunt. Duis in diam sem. Etiam quam tellus, vestibulum at lobortis et, faucibus vehicula nibh. Praesent iaculis enim velit, non interdum risus mollis vel. Mauris rutrum dapibus felis in luctus. Mauris ac tortor id ipsum viverra vulputate. Quisque non enim at ante porttitor aliquam vel varius ex. Sed ut justo vestibulum, aliquam dolor porttitor, aliquet tortor. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis justo non tincidunt tincidunt. Duis in diam sem. Etiam quam tellus, vestibulum at lobortis et, faucibus vehicula nibh. Praesent iaculis enim velit, non interdum risus mollis vel. Mauris rutrum dapibus felis in luctus. Mauris ac tortor id ipsum viverra vulputate. Quisque non enim at ante porttitor aliquam vel varius ex. Sed ut justo vestibulum, aliquam dolor porttitor, aliquet tortor.</p>
                     <p class="about-icon-container">
                         <a href="https://ca.linkedin.com/"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" class="about-icons" /></a>
                         <a href="https://github.com/MK-DlR"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="about-icons" /></a>
@@ -34,61 +34,22 @@
                             <a href="https://mk-dlr.github.io/battleship-project/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
+                    <p class="project-desc">A Milton Bradley style Battleship game, playable against the computer or another human player.</p>
                 </div>
                 <!-- battleship project end -->
-                <!-- admin dashboard project start -->
+                <!-- to do list project start -->
                 <div class="project-card">
-                    <img src="./projects/gifs/admin-project.gif" class="project-image">
+                    <img src="./projects/gifs/todo-project.gif" class="project-image">
                     <div class="project-card-header">
-                        <h3>Admin Dashboard</h3>
+                        <h3>To Do List</h3>
                         <div class="project-icon-container">
-                            <a href="https://github.com/MK-DlR/admin-dashboard"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/admin-dashboard/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://github.com/MK-DlR/todo-list"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="https://mk-dlr.github.io/todo-list/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
+                    <p class="project-desc">A fully functional to do list with local storage and user and display customization features.</p>
                 </div>
-                <!-- admin dashboard project end -->
-                <!-- calculator project start -->
-                <div class="project-card">
-                    <img src="./projects/gifs/calculator-project.gif" class="project-image">
-                    <div class="project-card-header">
-                        <h3>Calculator</h3>
-                        <div class="project-icon-container">
-                            <a href="https://github.com/MK-DlR/calculator"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/calculator/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
-                        </div>
-                    </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
-                </div>
-                <!-- calculator project end -->
-                <!-- sign up form project start -->
-                <div class="project-card">
-                    <img src="./projects/gifs/form-project.gif" class="project-image">
-                    <div class="project-card-header">
-                        <h3>Sign Up Form</h3>
-                        <div class="project-icon-container">
-                            <a href="https://github.com/MK-DlR/signup-form"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/signup-form/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
-                        </div>
-                    </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
-                </div>
-                <!-- sign up form project end -->
-                <!-- landing page project start -->
-                <div class="project-card">
-                    <img src="./projects/gifs/landing-project.gif" class="project-image">
-                    <div class="project-card-header">
-                        <h3>Landing Page</h3>
-                        <div class="project-icon-container">
-                            <a href="https://github.com/MK-DlR/landing-page"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/landing-page/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
-                        </div>
-                    </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
-                </div>
-                <!-- landing page project end -->
+                <!-- to do list project end -->
                 <!-- library project start -->
                 <div class="project-card">
                     <img src="./projects/gifs/library-project.gif" class="project-image">
@@ -99,7 +60,7 @@
                             <a href="https://mk-dlr.github.io/library/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
+                    <p class="project-desc">A library storage project for tracking book information and read status, able to display info and images.</p>
                 </div>
                 <!-- library project end -->
                 <!-- restaurant project start -->
@@ -112,48 +73,22 @@
                             <a href="https://mk-dlr.github.io/resto-page/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
+                    <p class="project-desc">A mock restaurant page for a fictional restaurant made using modules and featuring tabs.</p>
                 </div>
                 <!-- restaurant project end -->
-                <!-- etchasketch project start -->
+                <!-- calculator project start -->
                 <div class="project-card">
-                    <img src="./projects/gifs/sketch-project.gif" class="project-image">
+                    <img src="./projects/gifs/calculator-project.gif" class="project-image">
                     <div class="project-card-header">
-                        <h3>Etch-A-Sketch</h3>
+                        <h3>Calculator</h3>
                         <div class="project-icon-container">
-                            <a href="https://github.com/MK-DlR/etchasketch"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/etchasketch/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://github.com/MK-DlR/calculator"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="https://mk-dlr.github.io/calculator/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
+                    <p class="project-desc">A fully functional digital calculator with clear, backspace, and decimal point capabilities.</p>
                 </div>
-                <!-- etchasketch project end -->
-                <!-- to do list project start -->
-                <div class="project-card">
-                    <img src="./projects/gifs/todo-project.gif" class="project-image">
-                    <div class="project-card-header">
-                        <h3>To Do List</h3>
-                        <div class="project-icon-container">
-                            <a href="https://github.com/MK-DlR/todo-list"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/todo-list/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
-                        </div>
-                    </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
-                </div>
-                <!-- to do list project end -->
-                <!-- tic tac toe project start -->
-                <div class="project-card">
-                    <img src="./projects/gifs/ttt-project.gif" class="project-image">
-                    <div class="project-card-header">
-                        <h3>Tic Tac Toe</h3>
-                        <div class="project-icon-container">
-                            <a href="https://github.com/MK-DlR/tttgame"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/tttgame/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
-                        </div>
-                    </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
-                </div>
-                <!-- tic tac toe project end -->
+                <!-- calculator project end -->
                 <!-- weather app project start -->
                 <div class="project-card">
                     <img src="./projects/gifs/weather-project.gif" class="project-image">
@@ -164,9 +99,74 @@
                             <a href="https://mk-dlr.github.io/weather-app/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
+                    <p class="project-desc">A page for searching in various locations, with different images based on returned weather.</p>
                 </div>
                 <!-- weather app project end -->
+                <!-- admin dashboard project start -->
+                <div class="project-card">
+                    <img src="./projects/gifs/admin-project.gif" class="project-image">
+                    <div class="project-card-header">
+                        <h3>Admin Dashboard</h3>
+                        <div class="project-icon-container">
+                            <a href="https://github.com/MK-DlR/admin-dashboard"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="https://mk-dlr.github.io/admin-dashboard/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                        </div>
+                    </div>
+                    <p class="project-desc">An admin dashboard based off of a provided image, with header, sidebar, and individual cards.</p>
+                </div>
+                <!-- admin dashboard project end -->
+                <!-- sign up form project start -->
+                <div class="project-card">
+                    <img src="./projects/gifs/form-project.gif" class="project-image">
+                    <div class="project-card-header">
+                        <h3>Sign Up Form</h3>
+                        <div class="project-icon-container">
+                            <a href="https://github.com/MK-DlR/signup-form"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="https://mk-dlr.github.io/signup-form/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                        </div>
+                    </div>
+                    <p class="project-desc">A sign up form based off of a provided image, with built in input validity checks.</p>
+                </div>
+                <!-- sign up form project end -->
+                <!-- landing page project start -->
+                <div class="project-card">
+                    <img src="./projects/gifs/landing-project.gif" class="project-image">
+                    <div class="project-card-header">
+                        <h3>Landing Page</h3>
+                        <div class="project-icon-container">
+                            <a href="https://github.com/MK-DlR/landing-page"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="https://mk-dlr.github.io/landing-page/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                        </div>
+                    </div>
+                    <p class="project-desc">A basic landing page based off of a provided image, with different anchor links.</p>
+                </div>
+                <!-- landing page project end -->
+                <!-- tic tac toe project start -->
+                <div class="project-card">
+                    <img src="./projects/gifs/ttt-project.gif" class="project-image">
+                    <div class="project-card-header">
+                        <h3>Tic-Tac-Toe</h3>
+                        <div class="project-icon-container">
+                            <a href="https://github.com/MK-DlR/tttgame"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="https://mk-dlr.github.io/tttgame/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                        </div>
+                    </div>
+                    <p class="project-desc">A tic-tac-toe game playable between two human players with score tracking.</p>
+                </div>
+                <!-- tic tac toe project end -->
+                <!-- etchasketch project start -->
+                <div class="project-card">
+                    <img src="./projects/gifs/sketch-project.gif" class="project-image">
+                    <div class="project-card-header">
+                        <h3>Etch-A-Sketch</h3>
+                        <div class="project-icon-container">
+                            <a href="https://github.com/MK-DlR/etchasketch"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="https://mk-dlr.github.io/etchasketch/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                        </div>
+                    </div>
+                    <p class="project-desc">A digital Etch-A-Sketch with randomized "drawing" colors and customizable grid size.</p>
+                </div>
+                <!-- etchasketch project end -->
                 <!-- image carousel project start -->
                 <div class="project-card">
                     <img src="./projects/gifs/carousel-project.gif" class="project-image">
@@ -177,7 +177,7 @@
                             <a href="https://mk-dlr.github.io/image-carousel/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
-                    <p class="project-desc">Short description of the project. Just a couple of sentences will do.</p>
+                    <p class="project-desc">A simple image carousel with autoplay and click forward and backward functionality.</p>
                 </div>
                 <!-- image carousel project end -->
             </div>
